--- a/app/globals.css
+++ b/app/globals.css
@@ -198,6 +198,11 @@ body {
   background-color: #fff;
   color: #333;
 }
+.videocard {
+  padding: 1rem;
+  margin: 1rem;
+  text-align:center;
+}
 
 .card h2 {
   font-size: 1.5rem;
